z-index fix

--- a/express/fullstack-webpage/client/source/styles/Nav.sass
+++ b/express/fullstack-webpage/client/source/styles/Nav.sass
@@ -13,16 +13,16 @@
         flex-direction: column
         justify-content: space-around
         .hamburger-menu
-            z-index: 2
+            z-index: 999
             width: 50px
             height: 6px
-            background-color: black
+            background-color: white
             border-radius: 5px
             transition: all 500ms ease-in-out
             box-shadow: 0px 2px 5px rgba(255, 101, 47, 0.2)
             &::before, &::after
-                background-color: black
                 content: ""
+                background-color: white
                 position: absolute
                 width: 50px
                 height: 6px
@@ -133,7 +133,6 @@
             left: 0px
             flex-direction: column
             align-items: flex-start
-            z-index: 999
             padding: 50px 70px
             transition: all 800ms cubic-bezier(1, 0, 0, 1)
             &.open
